Install PowerShell Remoting Protocol for Python

--- a/ansible/vault.yml
+++ b/ansible/vault.yml
@@ -3,6 +3,10 @@
   ansible.builtin.pip:
     name: hvac
 
+- name: Install PowerShell Remoting Protocol for Python
+  ansible.builtin.pip:
+    name: pypsrp
+
 - name: Install netaddr
   ansible.builtin.pip:
     name: netaddr
