--- a/.devops/pipelines/vmware/build.yml
+++ b/.devops/pipelines/vmware/build.yml
@@ -94,6 +94,8 @@ stages:
             $env:VAULT_ADDR="$(vault_addr)"
             $env:VAULT_TOKEN="$(vault_token)"
 
+            pip install psrp
+
             $tfVars = @()
             $tfVars += "root_path = `"$(Build.Repository.LocalPath)`""
 
