Update image.yml for Azure Pipelines

--- a/.devops/pipelines/vmware/image.yml
+++ b/.devops/pipelines/vmware/image.yml
@@ -129,8 +129,8 @@ stages:
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
-          $packerVars += "vsphere_datacenter = `"GO`""
-          $packerVars += "vsphere_cluster = `"Infra`""
+          $packerVars += "vsphere_datacenter = `"Lab`""
+          $packerVars += "vsphere_cluster = `"SM`""
           $packerVars += "vsphere_folder = `"Templates`""
           $packerVars += "vsphere_datastore = `"$($esx.data.datastore)`""
           $packerVars += "vsphere_network = `"$($esx.data.network)`""
