--- a/.devops/pipelines/vmware/image.yml
+++ b/.devops/pipelines/vmware/image.yml
@@ -107,7 +107,7 @@ stages:
           $domain = vault kv get -format json -mount=go domain | ConvertFrom-Json
           $network = vault kv get -format json -mount=go vmware/network | ConvertFrom-Json
           $vcsa = vault kv get -format json -mount=go vmware/vcsa | ConvertFrom-Json
-          $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
+          $esx = vault kv get -format json -mount=go vmware/esx/ESX3 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
           $ip = [int]$($build.data.ip) + 1
@@ -181,7 +181,7 @@ stages:
           $domain = vault kv get -format json -mount=go domain | ConvertFrom-Json
           $network = vault kv get -format json -mount=go vmware/network | ConvertFrom-Json
           $vcsa = vault kv get -format json -mount=go vmware/vcsa | ConvertFrom-Json
-          $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
+          $esx = vault kv get -format json -mount=go vmware/esx/ESX3 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
           $ip = [int]$($build.data.ip) + 2
@@ -253,7 +253,7 @@ stages:
           $domain = vault kv get -format json -mount=go domain | ConvertFrom-Json
           $network = vault kv get -format json -mount=go vmware/network | ConvertFrom-Json
           $vcsa = vault kv get -format json -mount=go vmware/vcsa | ConvertFrom-Json
-          $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
+          $esx = vault kv get -format json -mount=go vmware/esx/ESX3 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
           $ip = [int]$($build.data.ip) + 3
@@ -325,7 +325,7 @@ stages:
           $domain = vault kv get -format json -mount=go domain | ConvertFrom-Json
           $network = vault kv get -format json -mount=go vmware/network | ConvertFrom-Json
           $vcsa = vault kv get -format json -mount=go vmware/vcsa | ConvertFrom-Json
-          $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
+          $esx = vault kv get -format json -mount=go vmware/esx/ESX3 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
           $ip = [int]$($build.data.ip) + 4
